backend/postgres-configuration/ingress.yaml
# Configurando o acesso externo direto ao cluster, 
# redirecionando um acesso para Service de uma aplicação.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service: 
                name: user-api
                port: 
                  number: 8080
          - path: /user
            pathType: Prefix
            backend:
              service: 
                name: user-api
                port: 
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: user-api
                port: 
                  number: 8080                
          - path: /product
            pathType: Prefix
            backend:
              service: 
                name: product-api
                port: 
                  number: 8081
          - path: /products
            pathType: Prefix
            backend:
              service: 
                name: product-api
                port: 
                  number: 8081
          - path: /shopping
            pathType: Prefix
            backend:
              service: 
                name: shopping-api
                port: 
                  number: 8082
